2008-11-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Fix non-struct output arguments in dynamic D-Bus method calls

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valaassignment.vala:
	* vala/valabasicblock.vala:
	* vala/valabinaryexpression.vala:
	* vala/valacastexpression.vala:
	* vala/valacatchclause.vala:
	* vala/valacodenode.vala:
	* vala/valadeclarationstatement.vala:
	* vala/valaelementaccess.vala:
	* vala/valaexpressionstatement.vala:
	* vala/valaflowanalyzer.vala:
	* vala/valaforeachstatement.vala:
	* vala/valainvocationexpression.vala:
	* vala/valamemberaccess.vala:
	* vala/valaobjectcreationexpression.vala:
	* vala/valaparenthesizedexpression.vala:
	* vala/valaphifunction.vala:
	* vala/valapointerindirection.vala:
	* vala/valareferencetransferexpression.vala:
	* vala/valareturnstatement.vala:
	* vala/valathrowstatement.vala:
	* vala/valaunaryexpression.vala:
	* compiler/valacompiler.vala:

	Report use of possibly uninitialized variables, fixes bug 508477
	and bug 556861

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valainterface.vala:
	* vala/valainterfacewriter.vala:
	* vala/valaparser.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* vapi/glib-2.0.vapi:
	* vapigen/valagidlparser.vala:
	* vapigen/valagirparser.vala:
	* vapigen/valamarkupreader.vala:
	* vapigen/valavapicheck.vala:
	* gen-project/valaprojectgenerator.vala:

	Do not use possibly uninitialized variables

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vala/valamemberaccess.vala:
	* vala/valamethod.vala:
	* vala/valasymbol.vala:
	* gobject/valaccodemethodmodule.vala:

	Report unused fields, methods, and local variables

	* vala/valacodecontext.vala:
	* vala/valadynamicproperty.vala:
	* vala/valaenum.vala:
	* vala/valagenieparser.vala: