@@ -291,9 +291,9 @@ public class Vala.Genie.Parser : CodeVisitor {
 		case TokenType.WHILE:
 			next ();
 			return;
+		default:
+			throw new ParseError.SYNTAX (get_error ("expected identifier"));
 		}
-
-		throw new ParseError.SYNTAX (get_error ("expected identifier"));
 	}
 
 	string parse_identifier () throws ParseError {
@@ -326,9 +326,9 @@ public class Vala.Genie.Parser : CodeVisitor {
 		case TokenType.NULL:
 			next ();
 			return new NullLiteral (get_src (begin));
+		default:
+			throw new ParseError.SYNTAX (get_error ("expected literal"));
 		}
-
-		throw new ParseError.SYNTAX (get_error ("expected literal"));
 	}
 
 	public void parse_file (SourceFile source_file) {
@@ -1091,8 +1091,12 @@ public class Vala.Genie.Parser : CodeVisitor {
 						}
 						var inner = parse_unary_expression ();
 						return new CastExpression (inner, type, get_src (begin), false);
+					default:
+						break;
 					}
 				}
+				break;
+			default:
 				break;
 			}
 			// no cast expression
@@ -1106,6 +1110,8 @@ public class Vala.Genie.Parser : CodeVisitor {
 			next ();
 			var op = parse_unary_expression ();
 			return new AddressofExpression (op, get_src (begin));
+		default:
+			break;
 		}
 
 		var expr = parse_primary_expression ();
@@ -1631,10 +1637,10 @@ public class Vala.Genie.Parser : CodeVisitor {
 		case TokenType.OP_PTR:
 			rollback (begin);
 			return true;
+		default:
+			rollback (begin);
+			return false;
 		}
-
-		rollback (begin);
-		return false;
 	}
 
 	Block parse_embedded_statement () throws ParseError {
